Update to latest vue-cli conf

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -1,34 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>{{ siteName }}</title>
+{% extends '_layouts/application' %}
 
-  {% if getenv('ENVIRONMENT') != 'dev' and getenv('ENVIRONMENT') != 'local' %}
-    <link rel="stylesheet" href="{{ rev('app.css') }}">
-  {% endif %}
-</head>
+{% block main %}
 
-<body class="bg-grey-darkest">
-  <div id="app">
-    {% set info = {
-      craftVersion: craft.app.getVersion(),
-      environment: getenv('ENVIRONMENT')
-    } %}
-    
-    <hello-world :info="{{ info|json_encode }}">
-      {{ getenv('DB_DATABASE') }}
-    </hello-world>
-  </div>
+Hello world!
 
-  {% if getenv('ENVIRONMENT') == 'dev' or getenv('ENVIRONMENT') == 'local' %}
-    <script src="http://localhost:8080/app.js"></script>
-  {% else %}
-    <script src="{{ rev('chunk-vendors.js') }}"></script>
-    <script src="{{ rev('app.js') }}"></script>
-  {% endif %}
 
-</body>
-</html>
+{% endblock %}
