--- a/templates/_layouts/application.twig
+++ b/templates/_layouts/application.twig
@@ -2,7 +2,6 @@
 {% header "Cache-Control: no-cache" %}
 {% header "Pragma: no-cache" %}
 {% endspaceless %}<!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en" class="no-js sr">
 <head>
   <meta charset="UTF-8">
@@ -32,7 +31,7 @@
     {% block footer %}
       {% include '_includes/chrome/footer' %}
     {% endblock %}
-    {% if getenv('ENVIRONMENT') == 'development' or getenv('ENVIRONMENT') == 'local' %}
+    {% if getenv('ENVIRONMENT') == 'development' %}
       <script src="http://localhost:8080/app.js"></script>
     {% else %}
       <script src="{{ rev('chunk-vendors.js') }}"></script>
