--- a/src/components/atoms/btn/btn.twig
+++ b/src/components/atoms/btn/btn.twig
@@ -1,1 +1,11 @@
-<a href="#" class="btn {{ modifier }}">{{ text }}</a>
+{%- if attrs is not defined -%}
+  {%- set attrs = {} -%}
+{%- endif -%}
+{%- if href is defined and href -%}
+  {%- set attrs = attrs | merge({ href: href }) -%}
+{%- endif -%}
+{% include '@atom' with {
+    el: (el is defined) ? el : 'a',
+    baseClass: 'btn',
+    content: text,
+  } %}
