remove placeholder vue code and run lint and test on pre-push hook

--- a/templates/_layouts/application.twig
+++ b/templates/_layouts/application.twig
@@ -4,7 +4,7 @@
 {% endspaceless %}<!DOCTYPE html>
 <html lang="en" class="no-js sr">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {#
     @todo add CDN hostname
