removed button component by default and commented out example of loading fractal component in craft index.twig

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -4,6 +4,8 @@
 
 Hello world!
 
+{# Example of loading a component from Fractal in Craft land
+
 {% include '@meta' with {
   text: 'this is meta',
   el: 'a',
@@ -12,7 +14,6 @@ Hello world!
   },
   modifiers: ['red'],
   data: { foo: 'bar'}
-} %}
-
+} %} #}
 
 {% endblock %}
