dynamically set asset server hostname in fractal so that can load assets when testing from other devices

--- a/src/components/styleguide/_preview.twig
+++ b/src/components/styleguide/_preview.twig
@@ -8,6 +8,6 @@
 </head>
 <body>
   {{ yield }}
-<script src="http://localhost:{{ assetPort() }}/app.js"></script>
+<script src="http://{{ assetHostname() }}:{{ assetPort() }}/app.js"></script>
 </body>
 </html>
