--- a/src/assets/styles/app.postcss
+++ b/src/assets/styles/app.postcss
@@ -5,12 +5,12 @@
  * You can see the styles here:
  * https://github.com/tailwindcss/tailwindcss/blob/master/css/preflight.css
  */
-@tailwind preflight;
+@import "tailwindcss/preflight.css";
 
 /**
  * This injects any component classes registered by plugins.
  */
-@tailwind components;
+@import "tailwindcss/components.css";
 
 /**
  * Here you would add any of your custom component classes; stuff that you'd
@@ -25,7 +25,7 @@
  * This injects all of Tailwind's utility classes, generated based on your
  * config file.
  */
-@tailwind utilities;
+@import "tailwindcss/utilities.css";
 
 /**
  * Here you would add any custom utilities you need that don't come out of the
@@ -35,3 +35,12 @@
  * @import 'utilities/background-patterns';
  */
 
+body {
+  @apply
+    text-base
+    antialiased
+    leading-normal;
+
+  /* Added to stop tiny resized windows squishing everything */
+  min-width: 320px;
+}
