Sticky footer with improved semantics

--- a/templates/_includes/chrome/footer.twig
+++ b/templates/_includes/chrome/footer.twig
@@ -1,3 +1,3 @@
-<footer>
-    &copy; {{ now | date('Y') }} {{ siteName }}
+<footer class="mt-auto">
+  <small>&copy; {{ now | date('Y') }} {{ siteName }}</small>
 </footer>
